--- a/CSS/CSS_Part_2/index.html
+++ b/CSS/CSS_Part_2/index.html
@@ -71,7 +71,15 @@
                 <button>answer</button>
             </span>
             <hr />
-            <p>this is end of my Website. Know more about us on <a href="google.com">Google</a></p>
     </main>
+    <div id="MyId">
+        <p>this is end of my Website. Know more about us on <a href="google.com">Google</a></p>
+    </div>
+    <div>
+        <input type="radio" id="yes" name="agreement">
+        <label for="yes">Yes</label>
+        <input type="radio" id="no" name="agreement">
+        <label for="no">No</label>
+    </div>
   </body>
 </html>
