first-line PseudoElement

--- a/CSS/CSS_Part_2/index.html
+++ b/CSS/CSS_Part_2/index.html
@@ -74,6 +74,12 @@
     </main>
     <div id="MyId">
         <p>this is end of my Website. Know more about us on <a href="google.com">Google</a></p>
+        <p>dsulasd,afsdsgfh rafrf,aefrefa.rfrafarefrer5yt,esgftefefe tegere.trgwtgw efgewtgre,rgwtg rfewrw.
+            dfvjhbc,dfvbeknj.cburecjr rsjcrcnr srcsr,r rjcr.rc
+            rujew b weebd. ebd,dwd. edhbedwhd
+            ,  w,bdwe d ewhabdk,ew,strs, ueh . ejje 7j5twh h w4h t hshuf  ew ,wenqfl erlknj erfn
+            hrvbhjgfrse,dbre ewjerwd
+        </p>
     </div>
     <div>
         <input type="radio" id="yes" name="agreement">
