--- a/CSS/CSS_Part_4/index.html
+++ b/CSS/CSS_Part_4/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <!-- <section>
         <div id="one">1</div>
         <div id="two">2</div>
         <div id="three">3</div>
         <div id="four">4</div>
         <div id="five">5</div>
-    </section>
+    </section> -->
 
-    
+    <div>BOX</div>
 </body>
 </html>
