--- a/CSS/CSS_Part_4/index.html
+++ b/CSS/CSS_Part_4/index.html
@@ -17,5 +17,10 @@
         <div></div>
         <div id="relative"></div>
     </section>
+    <section>
+        <h2>Absolute Demo</h2>
+        <div></div>
+        <div id="absolute"></div>
+    </section>
 </body>
 </html>
