--- a/CSS/CSS_Part_4/index.html
+++ b/CSS/CSS_Part_4/index.html
@@ -20,7 +20,12 @@
     <section>
         <h2>Absolute Demo</h2>
         <div></div>
-        <div id="absolute"></div>
+        <div id="absolute">absolute</div>
+    </section>
+    <section>
+        <h2>Fixed Demo</h2>
+        <div></div>
+        <div id="fixed">fixed</div>
     </section>
 </body>
 </html>
