--- a/CSS/CSS_Part_6/index.html
+++ b/CSS/CSS_Part_6/index.html
@@ -10,7 +10,7 @@
     <h1>Grid Playground</h1>
 
     <div class="container">
-        <div class="item">1</div>
+        <div class="item one">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
