grid - block item

--- a/CSS/CSS_Part_6/index.html
+++ b/CSS/CSS_Part_6/index.html
@@ -16,6 +16,8 @@
         <div class="item">4</div>
         <div class="item">5</div>
     </div>
+
+    <span>This is a Span</span>
     
 </body>
 </html>
