Tryint to write stylesheet for the page

--- a/CSS/CSS_Part_6/index_pet_adoption.html
+++ b/CSS/CSS_Part_6/index_pet_adoption.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS</title>
-    <link rel="stylesheet" href="style_pet_adoption.css" />
+    <link rel="stylesheet" href="self_style_pet_adoption.css" />
   </head>
   <body>
     <h2><i>adoptme.com</i></h2>
