--- a/CSS/CSS_Part_6/PQ1.html
+++ b/CSS/CSS_Part_6/PQ1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Question 1</title>
-    <link rel="stylesheet" href="PQ1.css">
+    <link rel="stylesheet" href="PQ2.css">
 </head>
 <body>
     <div id="container">
@@ -13,7 +13,7 @@
         <div id="navigation">navigation (1row, 6column)</div>
         <div id="ads">ads (10row, 3column)</div>
         <div id="main">main (9row, 6column)</div>
-        <div id="footer">footer (1ro1, 12column)</div>
+        <div id="footer">footer (1row, 12column)</div>
     </div>
     
 </body>
