--- a/CSS/Bootstrap/index.html
+++ b/CSS/Bootstrap/index.html
@@ -21,8 +21,11 @@
     <button class="btn btn-outline-warning">btn two</button>
     <button class="btn btn-info btn-lg">btn three</button>
     <button class="btn btn-success btn-sm">btn four</button>
-
     <a href="#" class="btn btn-dark">Google me!</a>
+    <br>
+    <h3>Notifications <span class="badge bg-primary">New</span></h3>
+    <br>
+    <button class="btn btn-primary">Messages <span class="badge bg- ">4+</span></button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
