--- a/CSS/Bootstrap/index.html
+++ b/CSS/Bootstrap/index.html
@@ -28,10 +28,16 @@
     <button class="btn btn-primary">Messages <span class="badge bg- ">4+</span></button>
 
     <div class="alert alert-danger">Download Failed!</div>
-    
+
     <div class="alert alert-success alert-dismissible">
         Congratulations! Your score is 50/50
         <button class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
+
+    <div class="btn-group">
+        <button class="btn btn-primary">Left</button>
+        <button class="btn btn-outline-primary">Middle</button>
+        <button class="btn btn-primary">Right</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
