--- a/CSS/Bootstrap/index.html
+++ b/CSS/Bootstrap/index.html
@@ -35,11 +35,10 @@
     </div>
 
     <div class="btn-group">
-        <button class="btn btn-primary">Left</button>
-        <button class="btn btn-outline-primary">Middle</button>
-        <button class="btn btn-primary">Right</button>
+        <button class="btn btn-outline-secondary">Left</button>
+        <button class="btn btn-outline-secondary">Middle</button>
+        <button class="btn btn-outline-secondary">Right</button>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
