--- a/CSS/Bootstrap/index.html
+++ b/CSS/Bootstrap/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h2>Bootstrap Demo</h2>
+
+    <nav class="navbar bg-body-tertiary">
+      <a class="navbar-brand" href="#">Brand Name</a>
+    </nav>
+
     <div class="container">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus dignissimos aliquid modi facilis, amet laborum dicta nemo enim temporibus quos nihil voluptas, nobis ullam culpa molestias deleniti aliquam repudiandae earum.
         Atque sapiente velit ad voluptas perferendis ex consequuntur delectus laborum natus? Possimus temporibus consequuntur amet aut reiciendis velit qui unde veritatis eos voluptatem, expedita et tempore minima praesentium itaque. Perspiciatis?
@@ -35,9 +40,9 @@
     </div>
 
     <div class="btn-group">
-        <button class="btn btn-outline-secondary">Left</button>
-        <button class="btn btn-outline-secondary">Middle</button>
-        <button class="btn btn-outline-secondary">Right</button>
+        <button class="btn btn-outline-success">Left</button>
+        <button class="btn btn-outline-success">Middle</button>
+        <button class="btn btn-outline-success">Right</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
